--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,13 @@
 .btn-h1-spacing {
     margin-top: 20px;
 }
+
+.checkbx {
+    align-items: center;
+    display: flex;
+}
+
+.checkbx label {
+    margin-bottom: 0;
+    margin-right: 5px;
+}
